# srp

.github/workflows/: rust.yml
docs/: README.md
examples/udp/: client.toml
shared/src/: config.rs  lib.rs  logger.rs
srp/: Cargo.toml  Dockerfile
srp/src/: certificate_validation.rs  healthchecks.rs  main.rs  proxy_tcp.rs  proxy_udp.rs
srps/: Cargo.toml  Dockerfile
srps/src/: configuration.rs  main.rs  proxy_tcp.rs  proxy_udp.rs
testing/: client.toml  compose.yml  server.toml
